Fixed fieldboxes not visible with dark mode

--- a/src/pages/AddRecipe.module.css
+++ b/src/pages/AddRecipe.module.css
@@ -15,3 +15,9 @@
     border-color: #3880ff;
     outline: none;
 }
+
+@media (prefers-color-scheme: dark) {
+    .fieldbox{
+        color: black;
+    }
+}
